--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="#" class="mil-logo">E.</a>
+                <a href="#" class="mil-logo">EFFEX.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -487,8 +487,8 @@
                           </div>
                         </div>
                       </div>
-                      <div style="display: flex; align-items: center; justify-content: center;">
-                        <a href="portfolio-1.html" class="mil-button mil-arrow-place mil-btn-space">
+                      <div style="display:-webkit-flex; align-items: center; justify-content: center;">
+                        <a href="portfolio-3.html" class="mil-button mil-arrow-place mil-btn-space" style="background-color: #8162FE;">
                             <span>View Full Portfolio</span>
                         </a>
                       </div>
