--- a/services.html
+++ b/services.html
@@ -228,7 +228,7 @@
                                         <div class="row">
                                             <div class="col-md-6 col-lg-6">
                                                 <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor mil-offset">
-                                                    <h4 class="mil-muted mil-up mil-mb-30">Branding and <br>Identity Design</h4>
+                                                    <h4 class="mil-muted mil-up mil-mb-30">Video Editing<br>& Motion Design</h4>
                                                     <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">UX Audits</li>
@@ -243,7 +243,7 @@
                                             </div>
                                             <div class="col-md-6 col-lg-6">
                                                 <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor">
-                                                    <h4 class="mil-muted mil-up mil-mb-30">Website Design <br>and Development</h4>
+                                                    <h4 class="mil-muted mil-up mil-mb-30">Thumbnail Design<br>and Illustrations</h4>
                                                     <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">UX Audits</li>
@@ -258,7 +258,7 @@
                                             </div>
                                             <div class="col-md-6 col-lg-6">
                                                 <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor mil-offset">
-                                                    <h4 class="mil-muted mil-up mil-mb-30">Advertising and <br>Marketing Campaigns</h4>
+                                                    <h4 class="mil-muted mil-up mil-mb-30">YouTube Channel<br>Management & SEO</h4>
                                                     <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">UX Audits</li>
@@ -273,7 +273,7 @@
                                             </div>
                                             <div class="col-md-6 col-lg-6">
                                                 <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor">
-                                                    <h4 class="mil-muted mil-up mil-mb-30">Creative Consulting <br>Concept Development</h4>
+                                                    <h4 class="mil-muted mil-up mil-mb-30">Social Media & Community<br>Management</h4>
                                                     <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">UX Audits</li>
