--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                           </div>
                         </div>
                       </div>
-                      <div style="display:-webkit-flex; align-items: center; justify-content: center;">
+                      <div style="display: flex; align-items: center; justify-content: center;">
                         <a href="portfolio-3.html" class="mil-button mil-arrow-place mil-btn-space" style="background-color: #8162FE;">
                             <span>View Full Portfolio</span>
                         </a>
