--- a/services.html
+++ b/services.html
@@ -229,7 +229,7 @@
                                             <div class="col-md-6 col-lg-6">
                                                 <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor mil-offset">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Video Editing<br>& Motion Design</h4>
-                                                    <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
+                                                    <p class="mil-descr mil-light-soft mil-up mil-mb-30">We create attention-grabbing edits and motion graphics to make your videos stand out. Whether it’s for social media, YouTube, or any platform, we’ll keep your audience hooked from start to finish.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">UX Audits</li>
                                                         <li class="mil-up">Design thinking</li>
@@ -244,7 +244,7 @@
                                             <div class="col-md-6 col-lg-6">
                                                 <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Thumbnail Design<br>and Illustrations</h4>
-                                                    <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
+                                                    <p class="mil-descr mil-light-soft mil-up mil-mb-30">Need a thumbnail that pops? We design thumbnails and illustrations that grab attention and make people want to click. Your content deserves a strong visual start!</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">UX Audits</li>
                                                         <li class="mil-up">Design thinking</li>
@@ -259,7 +259,7 @@
                                             <div class="col-md-6 col-lg-6">
                                                 <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor mil-offset">
                                                     <h4 class="mil-muted mil-up mil-mb-30">YouTube Channel<br>Management & SEO</h4>
-                                                    <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
+                                                    <p class="mil-descr mil-light-soft mil-up mil-mb-30">We handle everything from content planning to SEO, so your YouTube channel gets the visibility it deserves. Sit back and focus on creating while we optimize and grow your channel.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">UX Audits</li>
                                                         <li class="mil-up">Design thinking</li>
@@ -274,7 +274,7 @@
                                             <div class="col-md-6 col-lg-6">
                                                 <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Social Media & Community<br>Management</h4>
-                                                    <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
+                                                    <p class="mil-descr mil-light-soft mil-up mil-mb-30">We engage your community, from Instagram broadcast channels to subreddits to PAID Skool Community. Whether free or PAID, we ensure your brand connects meaningfully, while you grow and earn passively.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">UX Audits</li>
                                                         <li class="mil-up">Design thinking</li>
@@ -332,7 +332,7 @@
                                                 <ul>
                                                     <nav class="mil-footer-menu mil-mb-60" style="margin-top: 50px;">
                                                     <li class="mil-up mil-active">
-                                                        <a href="home-1.html">Home</a>
+                                                        <a href="index.html">Home</a>
                                                     </li>
                                                     <li class="mil-up">
                                                         <a href="portfolio-1.html">Portfolio</a>
