--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 						</p>
 						<div class="mil-about-quote">
 							<div class="mil-avatar mil-up">
-								<img src="img/faces/customers/Square Image.jpg" alt="Founder">
+								<img src="img\faces\Faceshot.jpg" alt="Founder">
 							</div>
 							<h6 class="mil-quote mil-up">We are here to bring creativity to every frame!<br>
 								<span class="mil-thin">Founder, EFFEX</span>
