--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -216,13 +216,29 @@
 
                 <!-- portfolio -->
                 <section class="mil-portfolio-slider-frame">
+                    <div class="container">
+                        <div class="row align-items-center mil-mb-30">
+                            <div class="col-lg-12 mil-mb-30">
+                                <div class="mil-adaptive mil-up">
+    
+                                    <ul class="mil-category-list">
+                                        <li><a href="#" class="mil-active">All categories</a></li>
+                                        <li><a href="#">Design</a></li>
+                                        <li><a href="#">Art</a></li>
+                                        <li><a href="#">Code</a></li>
+                                        <li><a href="#">Technology</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="mil-animation-frame">
                         <div class="mil-animation mil-position-4 mil-dark mil-scale" data-value-1="1" data-value-2="2" style="top: -60px; right: -4px;"></div>
                     </div>
                     <div class="container">
                         <div class="row align-items-end">
                             <div class="col-lg-9">
-                                <div class="swiper-container mil-portfolio-slider mil-up">
+                                <div class="swiper-container mil-portfolio-slider mil-up" data-groups='["all"]'> 
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
 
@@ -375,6 +391,7 @@
 
                                         </div>
                                     </div>
+                                </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 mil-relative">
