--- a/services.html
+++ b/services.html
@@ -231,10 +231,11 @@
                                                     <h4 class="mil-muted mil-up mil-mb-30">Video Editing<br>& Motion Design</h4>
                                                     <p class="mil-descr mil-light-soft mil-up mil-mb-30">We create attention-grabbing edits and motion graphics to make your videos stand out. Whether it’s for social media, YouTube, or any platform, we’ll keep your audience hooked from start to finish.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
-                                                        <li class="mil-up">UX Audits</li>
-                                                        <li class="mil-up">Design thinking</li>
-                                                        <li class="mil-up">Methodologies</li>
-                                                        <li class="mil-up">Wireframing</li>
+                                                        <li class="mil-up">Advanced Color Grading</li>
+                                                        <li class="mil-up">Sound Design And Editing</li>
+                                                        <li class="mil-up">Animation & Motion Graphics</li>
+                                                        <li class="mil-up">Visual Effects (VFX)</li>
+                                                        <li class="mil-up">Video Formatting For Platforms</li>
                                                     </ul>
                                                     <div class="mil-link mil-accent mil-arrow-place mil-up">
                                                         <span>Read more</span>
@@ -246,10 +247,11 @@
                                                     <h4 class="mil-muted mil-up mil-mb-30">Thumbnail Design<br>and Illustrations</h4>
                                                     <p class="mil-descr mil-light-soft mil-up mil-mb-30">Need a thumbnail that pops? We design thumbnails and illustrations that grab attention and make people want to click. Your content deserves a strong visual start!</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
-                                                        <li class="mil-up">UX Audits</li>
-                                                        <li class="mil-up">Design thinking</li>
-                                                        <li class="mil-up">Methodologies</li>
-                                                        <li class="mil-up">Wireframing</li>
+                                                        <li class="mil-up">Typography & Text Effects</li>
+                                                        <li class="mil-up">Color Theory & Contrast</li>
+                                                        <li class="mil-up">Vector Art & Illustration</li>
+                                                        <li class="mil-up">Branding Consistency</li>
+                                                        <li class="mil-up">A/B Testing for Thumbnails</li>
                                                     </ul>
                                                     <div class="mil-link mil-accent mil-arrow-place mil-up">
                                                         <span>Read more</span>
@@ -261,10 +263,11 @@
                                                     <h4 class="mil-muted mil-up mil-mb-30">YouTube Channel<br>Management & SEO</h4>
                                                     <p class="mil-descr mil-light-soft mil-up mil-mb-30">We handle everything from content planning to SEO, so your YouTube channel gets the visibility it deserves. Sit back and focus on creating while we optimize and grow your channel.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
-                                                        <li class="mil-up">UX Audits</li>
-                                                        <li class="mil-up">Design thinking</li>
-                                                        <li class="mil-up">Methodologies</li>
-                                                        <li class="mil-up">Wireframing</li>
+                                                        <li class="mil-up">Keyword Research & Optimization</li>
+                                                        <li class="mil-up">Video Metadata Management</li>
+                                                        <li class="mil-up">Audience Retention Strategies</li>
+                                                        <li class="mil-up">Video Uploading, Scheduling & SEO</li>
+                                                        <li class="mil-up">Analytics Monitoring & Reporting</li>
                                                     </ul>
                                                     <div class="mil-link mil-accent mil-arrow-place mil-up">
                                                         <span>Read more</span>
@@ -276,10 +279,11 @@
                                                     <h4 class="mil-muted mil-up mil-mb-30">Social Media & Community<br>Management</h4>
                                                     <p class="mil-descr mil-light-soft mil-up mil-mb-30">We engage your community, from Instagram broadcast channels to subreddits to PAID Skool Community. Whether free or PAID, we ensure your brand connects meaningfully, while you grow and earn passively.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
-                                                        <li class="mil-up">UX Audits</li>
-                                                        <li class="mil-up">Design thinking</li>
-                                                        <li class="mil-up">Methodologies</li>
-                                                        <li class="mil-up">Wireframing</li>
+                                                        <li class="mil-up">Social Media Content Planning</li>
+                                                        <li class="mil-up">Community Engagement & Growth Strategies</li>
+                                                        <li class="mil-up">Platform-Specific Content Optimization</li>
+                                                        <li class="mil-up">Social Media Analytics & Insights</li>
+                                                        <li class="mil-up">Paid Ads & Campaign Management</li>
                                                     </ul>
                                                     <div class="mil-link mil-accent mil-arrow-place mil-up">
                                                         <span>Read more</span>
