--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 		<!-- page name -->
 		<title>EFFEX – Let's Create</title>
 	</head>
-	<>
 	<!-- wrapper -->
 	<div class="mil-wrapper" id="top">
 	<!-- cursor -->
@@ -755,53 +754,59 @@
 		</div>
 	</section>
 	<!-- pricing end -->
-	<!-- footer -->
-	<footer class="mil-dark-bg">
-	<div class="mi-invert-fix">
-		<div class="container" style="padding-top: -400px; padding-bottom: -100px;">
-			<div class="row justify-content-between">
-				<div class="col-md-4 col-lg-4 mil-mb-60">
-					<div class="mil-muted mil-logo mil-up mil-mb-30" style="margin-top: 50px;">EFFEX.
-					</div>
-				</div>
-				<div class="col-md-7 col-lg-6">
-					<div class="row justify-content-end">
-						<div class="col-md-6 col-lg-7">
-							<nav class="mil-footer-menu mil-mb-60" style="margin-top: 50px;">
-								<ul>
-									<li class="mil-up mil-active">
-										<a href="index.html">Home</a>
-									</li>
-									<li class="mil-up">
-										<a href="portfolio-3.html">Portfolio</a>
-									</li>
-									<li class="mil-up">
-										<a href="services.html">Services</a>
-									</li>
-									<li class="mil-up">
-										<a href="contact.html">Contact</a>
-									</li>
-								</ul>
-							</nav>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-5">
-					<ul class="mil-menu-list mil-up mil-mb-60" style="margin-top: 50px;">
-						<li><a href="#." class="mil-light-soft">Privacy Policy</a></li>
-						<li><a href="#." class="mil-light-soft">Terms and conditions</a></li>
-						<li><a href="#." class="mil-light-soft">Cookie Policy</a></li>
-					</ul>
-					<nav class="mil-footer-menu mil-mb-60" style="margin-top: -47px;">
-						<h6 class="mil-muted mil-up" style="margin-bottom: 0;">Bangladesh</h6>
-						<a href="https://maps.app.goo.gl/hQELs3aR8MfMLVeb7"
-							class="mil-light-soft mil-up">Gopalganj, Dhaka - 8100</a>
-						<p class="mil-light-soft mil-up" style="margin-top: 0;">
-							<span class="mil-no-wrap">+880 15375 70341</span>
-						</p>
-					</nav>
-				</div>
-				<!-- footer end -->
+
+                 <!-- footer -->
+                 <footer class="mil-dark-bg">
+                    <div class="mi-invert-fix">
+                      <div class="container" style="padding-top: -400px; padding-bottom: -100px;">
+                            <div class="row justify-content-between">
+                                <div class="col-md-4 col-lg-4 mil-mb-60">
+
+                                  <div class="mil-muted mil-logo mil-up mil-mb-30" style="margin-top: 50px;">EFFEX.</div>
+
+
+                                </div>
+                                <div class="col-md-7 col-lg-6">
+                                    <div class="row justify-content-end">
+                                        <div class="col-md-6 col-lg-7">
+
+                                            <nav class="mil-footer-menu mil-mb-60">
+                                                <ul>
+                                                    <nav class="mil-footer-menu mil-mb-60" style="margin-top: 50px;">
+                                                    <li class="mil-up mil-active">
+                                                        <a href="home-1.html">Home</a>
+                                                    </li>
+                                                    <li class="mil-up">
+                                                        <a href="portfolio-1.html">Portfolio</a>
+                                                    </li>
+                                                    <li class="mil-up">
+                                                        <a href="services.html">Services</a>
+                                                    </li>
+                                                    <li class="mil-up">
+                                                        <a href="contact.html">Contact</a>
+                                                    </li>
+                                                </ul>
+                                            </nav>
+
+                                        </div>
+                                        <div class="col-md-6 col-lg-5">
+
+                                            <ul class="mil-menu-list mil-up mil-mb-60">
+                                                <nav class="mil-footer-menu mil-mb-60" style="margin-top: 50px;">
+                                                <li><a href="#." class="mil-light-soft">Privacy Policy</a></li>
+                                                <li><a href="#." class="mil-light-soft">Terms and conditions</a></li>
+                                                <li><a href="#." class="mil-light-soft">Cookie Policy</a></li>
+                                            </ul>
+
+                                            <nav class="mil-footer-menu mil-mb-60" style="margin-top: -47px;">
+                                              <h6 class="mil-muted mil-up" style="margin-bottom: 0;">Bangladesh</h6>
+                                              <p class="mil-light-soft mil-up" style="margin-top: 0;">Gopalganj, Dhaka - 8100</p>
+                                              <p class="mil-light-soft mil-up" style="margin-top: 0;">
+                                                <span class="mil-no-wrap">+880 15375 70341</span>
+                                              </p>
+                                            </nav>
+                <!-- footer end -->
+
 				<!-- hidden elements -->
 				<div class="mil-hidden-elements">
 					<div class="mil-dodecahedron">
