--- a/portfolio-dub.html
+++ b/portfolio-dub.html
@@ -18,7 +18,7 @@
     <!-- ashley scss -->
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
-    <title>EFFEX</title>
+    <title>Ashley</title>
 
 </head>
 
@@ -43,14 +43,14 @@
         <div class="mil-preloader">
             <div class="mil-preloader-animation">
                 <div class="mil-pos-abs mil-animation-1">
-                    <p class="mil-h3 mil-muted mil-thin">Helping</p>
-                    <p class="mil-h3 mil-muted">Awesome</p>
-                    <p class="mil-h3 mil-muted mil-thin">Individuals</p>
+                    <p class="mil-h3 mil-muted mil-thin">Pioneering</p>
+                    <p class="mil-h3 mil-muted">Creative</p>
+                    <p class="mil-h3 mil-muted mil-thin">Excellence</p>
                 </div>
                 <div class="mil-pos-abs mil-animation-2">
                     <div class="mil-reveal-frame">
                         <p class="mil-reveal-box"></p>
-                        <p class="mil-h3 mil-muted mil-thin">EFFEX</p>
+                        <p class="mil-h3 mil-muted mil-thin">ashley.com</p>
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">EFFEX.</a>
+                <a href="home-1.html" class="mil-logo">A.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -214,19 +214,19 @@
         <div class="mil-content">
             <div id="swupMain" class="mil-main-transition">
 
-               <!-- portfolio -->
+                <!-- portfolio -->
                <section class="mil-portfolio-slider-frame">
                 <div class="container">
                     <div class="row align-items-center mil-mb-30">
                         <div class="col-lg-12 mil-mb-30">
                             <div class="mil-adaptive mil-up">
 
-                                    <ul class="mil-category-list">
-                                    <li><a href="#" class="mil-active" data-filter="all">All categories</a></li>
-                                    <li><a href="#" data-filter="design">Design</a></li>
-                                    <li><a href="#" data-filter="art">Art</a></li>
-                                    <li><a href="#" data-filter="code">Code</a></li>
-                                    <li><a href="#" data-filter="technology">Technology</a></li>
+                                <ul class="mil-category-list">
+                                    <li><a href="#" class="mil-active">All categories</a></li>
+                                    <li><a href="#">Design</a></li>
+                                    <li><a href="#">Art</a></li>
+                                    <li><a href="#">Code</a></li>
+                                    <li><a href="#">Technology</a></li>
                                 </ul>
                             </div>
                         </div>
